--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -10,8 +10,25 @@ player.firstName.length=length should be between {min} and {max}
 player.firstName.null=cannot be null
 player.lastName.length=length should be between {min} and {max}
 player.lastName.null=cannot be null
-player.dateOfBirth.null=cannot be null
-player.dateOfBirth.pattern=must match {regexp}
+player.date.null=cannot be null
+player.date.pattern=must match {regexp}
 player.foot.null=cannot be null
 player.foot.pattern=must match {regexp}
 
+club.fullName.null=cannot be null
+club.fullName.length=length should be between {min} and {max}
+club.nickname.null=cannot be null
+club.nickname.length=length should be between {min} and {max}
+club.dateOfFounding.null=cannot be null
+club.dateOfFounding.pattern=must match {regexp}
+club.stadium.null=cannot be null
+club.stadium.length=must match {regexp}
+
+playerId.null=cannot be null
+
+transfer.sourceClubId.null=cannot be null
+transfer.destinationClubId.null=cannot be null
+transfer.value.null=cannot be null
+transfer.date.pattern=must match {regexp}
+transfer.status.length=length should be between {min} and {max}
+transfer.status.pattern=must match {regexp}
