--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -22,9 +22,10 @@ club.nickname.length=length should be between {min} and {max}
 club.dateOfFounding.null=cannot be null
 club.dateOfFounding.pattern=must match {regexp}
 club.stadium.null=cannot be null
-club.stadium.length=must match {regexp}
+club.stadium.length==length should be between {min} and {max}
 
 playerId.null=cannot be null
+clubId.null=cannot be null
 
 transfer.sourceClubId.null=cannot be null
 transfer.destinationClubId.null=cannot be null
@@ -32,3 +33,17 @@ transfer.value.null=cannot be null
 transfer.date.pattern=must match {regexp}
 transfer.status.length=length should be between {min} and {max}
 transfer.status.pattern=must match {regexp}
+
+league.fullName.null=cannot be null
+league.fullName.length=length should be between {min} and {max}
+league.numberOfTeams.null=cannot be null
+
+season.name.null=cannot be null
+season.name.size=length should be between {min} and {max}
+season.startDate.null=cannot be null
+season.startDate.pattern=must match {regexp}
+season.endDate.null=cannot be null
+season.endDate.pattern=must match {regexp}
+season.status.null=cannot be null
+season.status.pattern=must match {regexp}
+
