--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -47,3 +47,11 @@ season.endDate.pattern=must match {regexp}
 season.status.null=cannot be null
 season.status.pattern=must match {regexp}
 
+fixture.homeClubId.null=cannot be null
+fixture.awayClubId.null=cannot be null
+fixture.result.null=cannot be null
+fixture.date.null=cannot be null
+fixture.date.pattern=must match {regexp}
+
+result.goalsHomeClub.null=cannot be null
+result.goalsAwayClub.null=cannot be null
