--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>jersey.config.server.provider.packages</param-name>
-            <param-value>org.tiwpr.szymie.resources</param-value>
+            <param-value>org.tiwpr.szymie.resources;org.tiwpr.szymie.filters</param-value>
         </init-param>
         <!--<init-param>
             <param-name>javax.ws.rs.Application</param-name>
